LinKreta_POC_Repository/force-app/main/default/objects/OrgAvailabilityMonitor__c/OrgAvailabilityMonitor__c.object-meta.xml
<CustomObject>
    <description>This Custom Object is created to store the Availability Monitoring URLs for various Portfolio/Program/Features</description>
    <label>OrgAvailabilityMonitor</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgAvailabilityMonitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>