LinKreta_POC_Repository/force-app/main/default/objects/OrgAvailabilityMonitor__c/fields/Monitoring_URL__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_URL__c</fullName>
    <label>Monitoring URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>