LinKreta_POC_Repository/force-app/main/default/objects/OrgAvailabilityMonitor__c/fields/Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Name__c</fullName>
    <label>Portfolio Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>