LinKreta_POC_Repository/force-app/main/default/objects/OrgAvailabilityMonitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Portfolio_Name__c</columns>
    <columns>NAME</columns>
    <columns>Feature_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>